--- a/StackGAN2Final.ipynb
+++ b/StackGAN2Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
     "            gen_losses.append(g_loss)\n",
     "\n",
     "        write_log(summary_writer, 'discriminator_loss', np.mean(dis_losses), epoch)\n",
-    "        write_log(summary_writer, 'generator_loss', np.mean(gen_losses)[0], epoch)\n",
+    "        write_log(summary_writer, 'generator_loss', np.mean([loss[0] for loss in gen_losses]), epoch)\n",
     "\n",
     "        if epoch % 2 == 0:\n",
     "            z_noise2 = np.random.normal(0, 1, size=(batch_size, z_dim))\n",
